fix TOC appendix spacing #1995

--- a/css/ccap-astronomy.css
+++ b/css/ccap-astronomy.css
@@ -2653,7 +2653,7 @@ div.book div.preface > div.section > div.section > div.titlepage > div > div > h
   margin-left: 46px;
   color: #2F7E9E;
   margin-bottom: 15.6px;
-  margin-left: .25em;
+  margin-left: .20em;
   font-size: 16px;
 }
 .book > .toc > ul > li.toc-appendix > a.target-appendix::before {
