--- a/css/refactor/astronomy-slots.less
+++ b/css/refactor/astronomy-slots.less
@@ -655,7 +655,7 @@
     .style('appendix'; any; toc) {
       color: @primary-color;
       .scale-padding(1, margin-bottom);
-      margin-left: .25em;
+      margin-left: .20em;
       font-size: 16px;
     }
   }
